services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-ml-service
spec:
  selector:
    app: fastapi-ml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort  # Change to LoadBalancer for cloud deployment
